# whoami-bot

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
whoami_bot/: __main__.py  cli.py
